<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_very_small"
        android:layout_marginRight="@dimen/layout_margin_very_small"
        app:cardUseCompatPadding="true"
        android:background="@color/colorCardBackground"
        app:cardCornerRadius="2dp"
        app:cardElevation="@dimen/layout_margin_very_small"
        app:contentPadding="@dimen/layout_margin_small"
        app:layout_constraintTop_toTopOf="parent"
       >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/nameHeading"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:hint="@string/label_contact_name"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:background="@null"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                android:id="@+id/border_view3"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/BorderLine"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameHeading" />

            <EditText
                android:id="@+id/emailHeading"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:hint="@string/label_contact_email"
                android:textSize="14sp"
                android:background="@null"
                android:textColor="@color/textColor"
                app:layout_constraintTop_toBottomOf="@+id/nameHeading" />

            <View
                android:id="@+id/border_view4"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/BorderLine"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailHeading" />

            <EditText
                android:id="@+id/subjectHeading"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:hint="@string/label_contact_subject"
                android:textSize="14sp"
                android:background="@null"
                android:textColor="@color/textColor"
                app:layout_constraintTop_toBottomOf="@+id/emailHeading" />

            <View
                android:id="@+id/border_view5"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/BorderLine"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subjectHeading" />

            <EditText
                android:id="@+id/messageHeading"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:hint="@string/label_contact_message"
                android:textSize="14sp"
                android:textColor="@color/textColor"
                android:background="@null"
                app:layout_constraintTop_toBottomOf="@+id/subjectHeading" />

            <View
                android:id="@+id/border_view6"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/BorderLine"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/messageHeading" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/oval_background_blue"
                android:gravity="center_vertical"
                android:text="@string/button_send"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/border_view6" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>