<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/layout_margin_very_small"
        android:layout_marginLeft="@dimen/layout_margin_very_small"
        android:layout_marginTop="@dimen/layout_margin_very_small"
        android:background="@color/colorCardBackground"
        app:cardCornerRadius="2dp"
        app:cardElevation="@dimen/layout_margin_very_small"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/layout_margin_small"
        app:layout_constraintTop_toTopOf="parent"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_map_small"
                android:drawablePadding="@dimen/layout_margin"
                android:drawableTint="@color/subTitleTextColor"
                android:gravity="center_vertical"
                android:text="@string/label_contact_address"
                android:textColor="@color/subTitleTextColor"
                android:textSize="14sp" />

            <View
                android:id="@+id/border_view"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/BorderLine"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address" />

            <TextView
                android:id="@+id/contact_number"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_phone_small"
                android:drawablePadding="@dimen/layout_margin"
                android:drawableTint="@color/subTitleTextColor"
                android:gravity="center_vertical"
                android:text="@string/label_phone_number"
                android:textColor="@color/subTitleTextColor"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/address" />

            <View
                android:id="@+id/border_view2"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/BorderLine"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_number" />

            <TextView
                android:id="@+id/contactEmail"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_mail_small"
                android:drawablePadding="@dimen/layout_margin"
                android:drawableTint="@color/subTitleTextColor"
                android:gravity="center_vertical"
                android:text="@string/label_email"
                android:textColor="@color/subTitleTextColor"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/contact_number" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>